--- a/src/main/resources/templates/home-grp3-assign2.html
+++ b/src/main/resources/templates/home-grp3-assign2.html
@@ -9,10 +9,6 @@
 	<img th:src="@{/images/image1.png}"/>
 	<img th:src="@{/images/image2.png}"/>
 	<img th:src="@{/images/image3.png}"/>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.
-Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.
-Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam.
-In scelerisque sem at dolor. </p>
+	<p>We are Group 3 from CSIS 3275 Software Engineering class. From the left George Weng, Mauricio Diaz and Roshan Karki. </p>
 </body>
 </html>
