chore: Changing the title of selfie page

--- a/src/main/resources/templates/selfie/rka_34.html
+++ b/src/main/resources/templates/selfie/rka_34.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Group Member No 3</title>
 </head>
 <body>
 	<img th:src="@{/images/image2.jpg}" th:width="300" th:height="300" alt="Image"/>
