chore: add selfie and modify html home page.

--- a/src/main/resources/templates/home-grp3-assign2.html
+++ b/src/main/resources/templates/home-grp3-assign2.html
@@ -8,7 +8,7 @@
 	<h1>Group Description</h1>
 	<img th:src="@{/images/image1.png}"/>
 	<img th:src="@{/images/image2.jpg}" th:width="300" th:height="300" alt="Image"/>
-	<img th:src="@{/images/image3.png}"/>
-	<p>We are Group 3 from CSIS 3275 Software Engineering class. From the left George Weng, Mauricio Diaz and Roshan Karki. </p>
+	<img th:src="@{/images/image3.jpg}" th:width="300" th:height="300" alt="Image"/>
+	<p>We are Group 3 from CSIS 3275 Software Engineering class. From the left George Weng, Roshan Karki and Mauricio Diaz. </p>
 </body>
 </html>
